# panglot-public

./: .dockerignore  .gitignore  .gitmodules  2b69b9b5-a172-4912-ae5a-7cb1e72f5808.jsonl  CLAUDE.original.md  Cargo.toml  Dockerfile  README.md  aggregators.md  aggregators_doc.md  architecture.mmd  architecture_sequence.mmd  check_errors.txt  config.yml  conv_claude.jsonl  docker-compose.yml  docker-entrypoint.sh  ideas.md  ideas_lexicon_digest.md  implementation_plan_2.md  librust_out.rlib  requirements.txt
CLAUDE-FRONT/: api.js  app.js  index.html
CLAUDE-FRONT/data/: tree.js
CLAUDE-FRONT/locales/: de.json  en.json  fr.json
anki_bridge/: Cargo.toml
anki_bridge/src/: deck_builder.rs  lib.rs  provider.rs  type_assertions.rs
app/: Cargo.toml  err.txt
app/src/: api.rs  auth.rs  config.rs  implementation_plan.md  main.rs  rate_limit_impl.rs  state.rs  type_assertions.rs  worker.rs
app/src/api/: audio.rs  config.rs  decks.rs  export.rs  generation.rs  lexicon.rs  models.rs  study.rs  tree.rs
cli/: Cargo.toml
cli/src/: main.rs
codegen/: Cargo.toml
codegen/src/: main.rs
configs/: pol_tree.yaml
core/: Cargo.toml  build.rs  schema.sql  test_lang_lookup.rs
core/migrations/: 20260317000000_initial_schema.sql  20260318000000_user_tree_customizations.sql  20260322000000_usage_logs.sql  20260322100000_add_performance_indexes.sql  20260323000000_extend_usage_logs.sql  20260418000000_add_prereqs_to_tree_customizations.sql  20260423000000_tree_definition_customizations.sql  20260423010000_practice_log_and_card_skill_name.sql  20260424000000_add_perf_indexes.sql  20260424010000_decks_target_language_not_null.sql  20260424020000_add_check_constraints.sql  20260424030000_cards_user_id_denorm.sql  20260424040000_without_rowid.sql  20260424050000_generation_batches.sql  20260424060000_cards_card_model_id.sql  20260430000000_identity_cleanup.sql  20260502000000_generation_suggested_deck_name.sql
core/src/: db.rs  domain.rs  lib.rs  morpheme.rs  morphology_enums.rs  rate_limit.rs  sanitize.rs  skill_tree.rs  srs.rs  storage.rs  traits.rs  type_assertions.rs  usage_analytics.rs  user.rs  validated.rs
core/src/db/: cards.rs  customizations.rs  decks.rs  drafts.rs  export.rs  generation_batches.rs  generations.rs  sql.rs  srs_ops.rs  types.rs
core/src/srs/: fsrs.rs  leitner.rs  mod.rs  models.rs  registry.rs  sm2.rs  tests.rs  traits.rs
core/trees/: ara_tree.yaml  cmn_tree.yaml  dan_tree.yaml  jpn_tree.yaml  kor_tree.yaml  pol_fast_track_tree.yaml  pol_tree.yaml  rus_tree.yaml  tur_tree.yaml
data/: tree.js
docs/: panini_components_migration.md
engine/: Cargo.toml  err.txt  errors.txt
engine/src/: analyzer.rs  card_models.rs  digest.rs  feature_extractor.rs  generator.rs  learner_profile.rs  lib.rs  llm_backend.rs  llm_client.rs  llm_utils.rs  panini_adapter.rs  pipeline.rs  post_process.rs  prompts.rs  python_sidecar.rs  skill_tree.rs  type_assertions.rs  usage.rs  validation.rs
engine/src/pipeline/: builder.rs  core.rs  dyn_trait.rs  generation.rs  mod.rs  types.rs  worker.rs
langs/: Cargo.toml  build.rs
langs/src/: arabic.rs  dan.rs  kor.rs  lib.rs  polish.rs  rus.rs  tur.rs  type_assertions.rs
langs/trees/: ara_tree.yaml
lc_macro/: Cargo.toml
lc_macro/src/: lib.rs
locales/: de.json  en.json  fr.json
panini/panini-engine/src/: lib.rs
prompts/: example_common.yaml  example_extractor.yaml  example_generator.yaml  example_user.yaml
scripts/: sidecar.py
