[workspace]
members = [
    "core",
    "engine",
    "anki_bridge",
    "langs",
    "app",
    "lc_macro",
    "codegen",
    "panini/panini-core",
    "panini/panini-macro",
    "panini/panini-engine",
    "panini/panini-langs",
    "panini/panini",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "A linguistic feature extraction and management framework for language learning"
repository = "https://github.com/yro7/Panglot"
license = "MIT"
keywords = ["linguistics", "nlp", "language-learning", "extraction", "anki"]
categories = ["science", "text-processing", "education"]
readme = "README.md"

[workspace.lints.clippy]
must_use_candidate = "allow"
