[package]
name = "anki_bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
lc_core = { path = "../core" }
langs = { path = "../langs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.50.0", features = ["macros", "rt"] }
async-trait = "0.1.89"
rusqlite = { version = "=0.32.1", features = ["bundled"] }
tracing = "0.1"

[dev-dependencies]
static_assertions = "1.1"
