[package]
name = "anki_bridge"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
lc_core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.50.0", features = ["macros", "rt"] }
async-trait = "0.1.89"
tracing = "0.1"

[dev-dependencies]
static_assertions = "1.1"

[lints]
workspace = true
