[package]
name = "cli"
version.workspace = true
edition.workspace = true
description = "A command-line interface for the Panglot language learning engine"
license.workspace = true

[dependencies]
engine = { path = "../engine" }
core = { package = "lc_core", path = "../core" }
langs = { path = "../langs" }
anki_bridge = { path = "../anki_bridge" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }

[lints]
workspace = true
