[package]
name = "lc-codegen"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "lc-codegen"
path = "src/main.rs"

[dependencies]
rig-core = "0.33"
isolang = { version = "2.4.0", features = ["english_names"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dotenvy = "0.15"

[lints]
workspace = true
