[package]
name = "lc_core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
panini-core = { path = "../panini/panini-core" }
schemars = { version = "1.2.1", features = ["uuid1"] }
serde = { version = "1", features = ["derive"] }
lc_macro = { path = "../lc_macro" }
isolang = { version = "2.4.0", features = ["english_names"] }
iso15924 = "0.1.0"
async-trait = "0.1.89"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "uuid", "chrono", "migrate"] }
chrono = "0.4.44"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
utoipa = "5"
serde_json = "1"
serde_yml = "0.0.12"
include_dir = "0.7"

[dev-dependencies]
static_assertions = "1.1"
tokio = { version = "1", features = ["full"] }
