[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
lc_core = { path = "../core" }
langs = { path = "../langs" }
panini-engine = { path = "../panini/panini-engine" }
panini-core = { path = "../panini/panini-core" }
panini = { path = "../panini/panini" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
strum = { version = "0.26", features = ["derive"] }
typed-builder = "0.23.2"
thiserror = "2.0.18"
schemars = "1.2.1"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
async-trait = "0.1.89"
anyhow = "1.0.102"
futures = "0.3.32"
rig-core = "0.33"
regex = "1"
isolang = { version = "2.4.0", features = ["english_names"] }
tracing = "0.1"
backoff = { version = "0.4", features = ["tokio"] }

[dev-dependencies]
static_assertions = "1.1"
