[package]
name = "langs"
version = "0.1.0"
edition = "2024"

[dependencies]
lc_core = { path = "../core" }
lc_macro = { path = "../lc_macro" }
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"  # Used in tests for serialization roundtrips
serde_yaml = "0.9"

[build-dependencies]
regex = "1"

[dev-dependencies]
static_assertions = "1.1"
