[package]
name = "langs"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
lc_core = { path = "../core" }
lc_macro = { path = "../lc_macro" }
panini-langs = { path = "../panini/panini-langs" }
panini-core = { path = "../panini/panini-core" }
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"  # Used in tests for serialization roundtrips

[build-dependencies]
regex = "1"

[dev-dependencies]
static_assertions = "1.1"

[lints]
workspace = true
